DHFPROD-2096: remove warnings for java 11 jdk